# evotensile

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/: fp16_nt_hhs_gfx1151.yaml
csrc/: structured_runner.cpp
docs/: blind_campaign_control.md  blind_experiment_infrastructure.md  blind_one_shape_experiment.md  campaign_policy_tuning.md  contextual_pair_model.md  custom_proposals.md  database.md  deployment_selection.md  exact_pair_scheduling.md  experiment_100_shape.md  experiment_1135_shape.md  experiment_blind_one_shape.md  family_aware_ea_screening.md  gomea.md  linkage_learning.md  linkage_search_plan.md  multi_shape_campaign_control.md  noisy_measurements.md  nt_hhs_search_space.md  nt_hhs_search_space_plan.md  one_shape_workflow_review.md  outlier_repair.md  pair_evaluators.md  plan.md  search_algorithms.md  search_cost_model.md  search_family_qd.md  search_gomea.md  search_linkage_learning.md  search_mechanical_coverage.md  search_operator_portfolio.md  search_outlier_repair.md  search_screening_stabilization.md  search_surrogate.md  shape_clustering.md  shape_promotion_racing.md  shared_bundle_acquisition.md  staged_round_controller.md  tensilelite_measurement.md  workload_weighting.md
evotensile/: __init__.py  activity.py  adaptive_retime.py  artifacts.py  cache.py  candidate.py  cli.py  database.py  ingest.py  manifest.py  metrics.py  parser.py  profile.py  proposal.py  proposals.py  protocol.py  rejection_mining.py  runner.py  scheduler.py  search_policy.py  search_space.py  shapes.py  solution_mapping.py  structured_runner.py  subprocess_utils.py  tensilelite_diagnostics.py  tensilelite_keys.py  tensilelite_parameter_types.py  utils.py  yaml_writer.py
scripts/: adaptive_retime.py  analyze_retime_reliability.py  build_structured_runner.sh  compare_hipblaslt_bench.py  confirm_grid100_round_winners.py  resume.py  (+28 more)
(+107 files in other folders)
