[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "evotensile"
version = "0.1.0"
description = "Quality-diversity autotuner for hipBLASLt TensileLite configurations"
readme = "README.md"
license = "MIT"
authors = [{name = "woctordho", email = "woctordho@outlook.com"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.15",
  "ty>=0.0.49",
]

[project.scripts]
evotensile = "evotensile.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evotensile*"]

[tool.ruff]
exclude = ["*/SOURCE/assembly/"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ty.analysis]
replace-imports-with-any = ["Tensile", "Tensile.**"]

[tool.ty.environment]
python-version = "3.10"
